Fixed footer overlapping

--- a/public/styles.css
+++ b/public/styles.css
@@ -47,7 +47,7 @@ h2 {
 }
 
 #footer {
-  position: absolute;
+  /*position: absolute;*/
   height: 25px;
   bottom: 0;
   text-align: center;
